fix: account 페이지에서 z-index 조정

--- a/src/screens/account/Account.module.css
+++ b/src/screens/account/Account.module.css
@@ -69,7 +69,7 @@
     overflow-x: auto;
     display: flex;
     align-items: flex-end;
-    z-index: 15;
+    z-index: 5;
   }
 
   .tab-list::-webkit-scrollbar {
